# abagpdb

./: INSTALL.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
PyPDBcomplex/: __init__.py  contacts.py  distances.py  sasa.py  sasa_analysis.py  vdw.py
PyPDBcomplex/multicomplex/: multi_analysis.py  multi_analysis_viz.py  multi_dashboard.py
PyPDBcomplex/visualization/: contacts_viz.py  distance_viz.py  geometry_viz.py  residue_feat_viz.py
abagpdb/: __init__.py  geometry.py  interface.py  models.py  pdbparser.py  residue_features.py  selection.py  single_chain_features.py
abagpdb/multicomplex/: multi_complex_tabular_analysis.py  multi_visualizer.py
abagpdb/visualization/: interface_viz.py  sasa_viz.py  vdw_viz.py
examples/: README.md  nb1-pdb_file_processing.ipynb  nb10-multi_complex_comparison.ipynb  nb2-contact_analysis.ipynb  nb3-interface_analysis.ipynb  nb4-geometry_analysis.ipynb  nb5-distance_analysis.ipynb  nb6-sasa_analysis.ipynb  nb7-vdw_analysis.ipynb  nb8-residue_features.ipynb  nb9-single_chain_features.ipynb
