[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "abagpdb"
version = "0.1.0"
description = "Comprehensive toolkit for protein-protein complex structure analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Faisal B Ashraf", email = "faisal.b.ashraf@gmail.com"}
]
keywords = [
    "bioinformatics",
    "protein structure",
    "antibody",
    "antigen",
    "PDB",
    "molecular interactions",
    "structural biology",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]
viz = [
    "plotly>=5.0",
    "seaborn>=0.11",
]
all = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "plotly>=5.0",
    "seaborn>=0.11",
]

[project.urls]
Homepage = "https://github.com/fbabd/abagpdb"
Documentation = "https://github.com/fbabd/abagpdb#readme"
Repository = "https://github.com/fbabd/abagpdb"
"Bug Reports" = "https://github.com/fbabd/abagpdb/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["abagpdb*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
abagpdb = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=abagpdb --cov-report=html --cov-report=term"
